[gd_scene load_steps=5 format=3 uid="uid://7g7f06gpebts"]

[ext_resource type="Script" path="res://scripts/destructible_platform.gd" id="1_40dd2"]
[ext_resource type="PackedScene" uid="uid://c74kd7qbx2xnq" path="res://fbxs/KenneyTextures/block-snow.fbx" id="2_2yl8e"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mojds"]
size = Vector3(3.00293, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_ws2y7"]
size = Vector3(2.60507, 1.02185, 1.15771)

[node name="DestructiblePlatform" type="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.00483286)
collision_layer = 8
collision_mask = 13
script = ExtResource("1_40dd2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.185473, 0.534666, 0)
shape = SubResource("BoxShape3D_mojds")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="block-snow" parent="MeshInstance3D" instance=ExtResource("2_2yl8e")]

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.23497, 0.584363, -0.0788574)
shape = SubResource("BoxShape3D_ws2y7")

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
